refactor(drawing): 重构绘图工具的代码结构和实现细节
- 移除 AbstractModeHandler 中的双击检测相关常量和方法
- 从 AlignConstants 中删除未使用的对齐键常量和容差常量
- 在 AnnotationStrategy 中使用 switch 表达式替代 if-else 链
- 优化 AnnotationStrategy 中的面积标注闭合形状判断逻辑
- 修复椭圆面积计算中的变量声明问题
- 更新 AnnotationStrategy 中的选择数量限制判断
- 简化 ArcTool 中的克隆操作
- 移除 ArrayOperationException 中的冗余构造函数和方法
- 修复 ArrayStrategy 中路径阵列的条件判断
- 删除 BaseToolConfigAdapter 中的重复方法实现
- 在多个工具类中添加文档分段标记
- 移除 BoundingBoxControlManager 中的废弃方法和颜色常量
- 简化 ChamferHandler 中的空值检查逻辑
- 优化 ChamferHandler 中的角点索引计算
- 移除 ChamferStrategy 中未使用的键盘常量
- 删除 DragInteractionStrategy 和 DrawContextAdapter 类文件
- 移除 DragSession 中的未使用方法